# hse_evolution_project

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  CMakeRC.cmake  README.md  animal.cpp  animal.h  cmake  hse_evolution_project.yml  main.cpp
.github/workflows/: hse_evolution_project.yml
include/: Animal.h  Board.h  Cards.h  Deck.h  Game.h  Player.h  Properties.h  TextField.h  animal.h  board.h  bot.h  button.h  cards.h  constants.h  deck.h  errors.h  game.h  game_fwd.h  log.h  phase.h  phase_fwd.h  player.h  properties.h  settings.h  text_field.h  view.h  view_fwd.h  window.h  window_fwd.h
server/: CMakeLists.txt  cmake  server  server.cpp  server.proto
source/: Animal.cpp  Board.cpp  Deck.cpp  Game.cpp  Player.cpp  TextField.cpp  animal.cpp  board.cpp  bot.cpp  button.cpp  cards.cpp  deck.cpp  development_phase.cpp  feeding_phase.cpp  game.cpp  game_window.cpp  log.cpp  main.cpp  phase.cpp  player.cpp  properties.cpp  settings.cpp  start_windows.cpp  text_field.cpp  view.cpp  window.cpp
src/: Board.cpp  Deck.cpp  Game.cpp  Player.cpp  main.cpp
